fixed footer overlap

--- a/styles.css
+++ b/styles.css
@@ -4,39 +4,62 @@
 }
 
 body{
+    min-height: 100vh;
     margin: 0;
     text-align: center;
-    /*color: teal;*/
 }
 
 header{
-    margin-top: 1em;
+    position: fixed;
+}
+
+.sticky-footer{
+    position: sticky;
+    top:100%;
+    padding: 0 0 0 20px;
+    background: teal;
+}
+
+.logo{
+    /* margin-top: 1em; */
 }
 
 
 img {
-    max-width: 100%;
-    height: auto;
+    /* max-width: 100%; */
+    /* height: auto; */
   } 
 
+  .align-left{
+    float: left;
+    display: block;
+    text-align: left;
+    margin-bottom: 10px;
+  }
 
-nav li{
-    display: inline-block;
-    margin: 0.5em;
+  .align-right{
+       float: right;
+       display: block;
+       margin-right: 30px; 
+       text-align: left;
+  }
 
-}
+  a{
+    text-decoration: none;
+  }
+
+  ul{
+    list-style: none;
+  }
 
 nav a{
     color: white;
 }
 
-
 .navbar {
     overflow: hidden;
-    background-color: teal;/* #555;*/
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0px; /* Position the navbar at the top of the page */
-    width: 100vw; /* Full width */
+    background-color: teal;
+    width: 100vw;
   }
       
 
@@ -45,31 +68,18 @@ nav a{
 } 
 
 .home{
-    height: 100vh;
     width: 100%;
     overflow: hidden;
-    /*padding: 16em 7em 5em 5em;/*110px;*/
     padding: 10em 2em 5em 2em;
-    /*padding: 17vw 7vw 0vw 7vw;*/
-    /* 
-    padding-top: 7em;
-padding-right: 7em;
-padding-bottom: 7em;
-padding-left: 7em;
-    */
     text-align: center;
-    /*display: flex;
-    justify-content: space-between;*/
 }
 
 .home .android img{
     width: 20vh;    
-    height: auto;
 }
 
 .phone{
-    float: right;
-    
+    float: right; 
 }
 
 .phone img{
@@ -79,24 +89,21 @@ padding-left: 7em;
 
 }
 
-.header{
+.home-left-content{
     float: left;
     font-size: 0.5rem;
-    padding: 10vw;
-    /*padding: 6em 2em 10em 10em;*/
+    padding: 10vw 10vw 0 10vw;
 }
 
 div.division{
-    /*padding: 6.3em;*/
-    margin-top: 20vh;    
-    padding: 10vw 5vw 10vw 5vw;
-    height: 100vh;
+    padding: 0 5vw 10vw 5vw;
 }
 
 p.footer{
     
     display: inline-block;
     clear: both;
+    padding-right: 50px;
 }
 
 .button {
@@ -134,4 +141,14 @@ p.footer{
     font-weight: 600;
     font-size: 3.5vh;
     color: white;
+    }
+
+     .contact{
+        padding: 10px;
+        /* margin: 50px; */
+    } 
+
+    .contact p{
+        padding: 0;
+        margin: 0;
     }
